feat: Add HTMX showcase and related functionality