@@ -4,14 +4,22 @@ import dev.rebelcraft.j2html.layouts.PageLayoutBodyConfigurer;
 import dev.rebelcraft.j2html.layouts.PageLayoutHeadConfigurer;
 import dev.rebelcraft.j2html.toolkit.integration.bootstrap.BootstrapConfig;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class WebappPageLayoutConfigurer implements PageLayoutHeadConfigurer, PageLayoutBodyConfigurer {
 
     private final String pageTitle;
+    private final List<String> extraScripts;
 
     public WebappPageLayoutConfigurer(String pageTitle) {
+        this(pageTitle, List.of());
+    }
+
+    public WebappPageLayoutConfigurer(String pageTitle, List<String> extraScripts) {
         this.pageTitle = pageTitle;
+        this.extraScripts = extraScripts == null ? List.of() : List.copyOf(extraScripts);
     }
 
     @Override
@@ -29,8 +37,9 @@ public class WebappPageLayoutConfigurer implements PageLayoutHeadConfigurer, Pag
 
     @Override
     public List<String> scripts() {
-        return List.of(
-                BootstrapConfig.CDN_BUNDLE_MIN_JS_URL
-        );
+        List<String> scripts = new ArrayList<>();
+        scripts.add(BootstrapConfig.CDN_BUNDLE_MIN_JS_URL);
+        scripts.addAll(extraScripts);
+        return Collections.unmodifiableList(scripts);
     }
 }
